src/objects/FDS_KPI_Reporting__c.object
<CustomObject>
    <description>New object to measure KPI&apos;s that are being calculated outside Salesforce</description>
    <fields>
        <fullName>Area_Concerned__c</fullName>
        <description>Represents the Area that the KPI is related with. Can be &quot;Agency Management&quot;, &quot;Airline Suspension&quot;, &quot;CPS&quot;, &quot;Customer Service&quot;, &quot;DPC Management&quot;, &quot;Invoicing &amp; Collection&quot;, &quot;Quality&quot;, &quot;Remittance &amp; Settlement&quot;, &quot;SIS&quot;, &quot;ICH&quot;, &quot;ICCS&quot;, &quot;CNS&quot;.</description>
        <label>Area Concerned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agency Management</fullName>
                </value>
                <value>
                    <fullName>Airline Suspension</fullName>
                </value>
                <value>
                    <fullName>CNS</fullName>
                </value>
                <value>
                    <fullName>CPS</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>DPC Management</fullName>
                </value>
                <value>
                    <fullName>ICCS</fullName>
                </value>
                <value>
                    <fullName>ICH</fullName>
                </value>
                <value>
                    <fullName>Invoicing &amp; Collection</fullName>
                </value>
                <value>
                    <fullName>Quality</fullName>
                </value>
                <value>
                    <fullName>Remittance &amp; Settlement</fullName>
                </value>
                <value>
                    <fullName>SIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <description>Definition of KPI. How is it calculated</description>
        <label>Definition</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Of_Action__c</fullName>
        <label>Type Of Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public Case Comment</fullName>
                </value>
                <value>
                    <fullName>Creating a Task</fullName>
                </value>
                <value>
                    <fullName>Send NOI</fullName>
                </value>
                <value>
                    <fullName>Case Closure</fullName>
                </value>
                <value>
                    <fullName>Case Escalation</fullName>
                </value>
                <value>
                    <fullName>Case Reopening</fullName>
                </value>
                <value>
                    <fullName>Send Email</fullName>
                </value>
                <value>
                    <fullName>Pending Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <description>Represents the type of Value for the KPI. Either &quot;Percentage&quot; or &quot;Number&quot;</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>KPI Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Area_Concerned__c</columns>
        <columns>NAME</columns>
        <columns>Definition__c</columns>
        <columns>Target__c</columns>
        <columns>Value_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Systems</group>
            <group>FDS_KPI_Reporting_Team</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>KPI Reporting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Reporting</pluralLabel>
    <recordTypes>
        <fullName>CSC</fullName>
        <active>true</active>
        <label>CSC</label>
    </recordTypes>
    <recordTypes>
        <fullName>Global_reporting</fullName>
        <active>true</active>
        <label>Global reporting</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>